---
config:
  theme: dark
---
classDiagram
    DataBank *-- Modelos
    DataBank *-- Servicios

    class Modelos{}
    class Servicios{}
 

    Modelos <|-- AutenticableHelper
    Modelos <|-- Cuentas
    Modelos <|-- Excepciones
    Modelos <|-- Log
    Modelos <|-- Roles


    class AutenticableHelper{}
    class Cuentas{}
    class Excepciones{}
    class Log{
        + empleado: empleado
        + accion: str
        + estado: str
        + detalle: str
        
    }
    class Roles{}


    Servicios <|-- Banco
    Servicios <|-- BonusAdmin


    class Banco{
        + name: str
        + clients: list[Cliente]
        + employees: list[Empleado]
        + global_transactions: list[Transactions]
        + logs: list[Log]
        + bonus_admin: BonusAdmin
        + autenticate_user(employee, Password)
        + block_employee(employee)
        + unblock_employee(employee)
        + validate_permission(employee, action, obj)
        + verify_failed_attempt(employee)
        + create_client(employee, client_data)
        + upgrade_client(employee, client, account_type)
        + search_client_by_dni(dni)
        + list_client(employee)
        + create_account(employee, client, account_type)
        + delete_account(employee, account)
        + search_account_by_number(number)
        + list_accounts(employee)
        + list_accounts_by_client(client)
        + list_accounts_by_bank(new_bank_number)
        + change_account_status(employee, account)
        + register_transaction(transaction)
        + get_account_history(account)
        + get_client_history(client)
        + get_global_transactions(employee)
        + create_employee(employee, data, role)
        + delete_employee(employee, target)
        + change_role(employee, target, new_role)
        + list_employees(employee)
        + search_employee(dni)
        + approve_salary_increase(employee, target, amount)
        + apply_salary_increase(employee, target)
        + register_global_bonus()
        + get_total_bonus()
        + request_promotion(employee)
        + approve_promotion(director, employee)
        + update_experience(employee, points)
        + generate_clients_report()
        + generate_accounts_report()
        + generate_transactions_report()
        + generate_financial_report()
        + export_accounts_json()
        + export_reports_pdf()
        + sort_accounts_by_number()
        + sort_accounts_by_balance()
        + search_by_dni(dni)
        + search_by_account_number(number)
        + search_by_bank(bank)
        + register_log(action, employee, result)
        + get_logs()
        + detect_suspicious_operations()
        + request_credit(client, amount, months)
        + approve_credit(client, credit)
        + reject_credit()
        + calculate_credit_interest()
        + pay_credit_installment()
        + list_active_credits()
        + create_card()
        + block_card()
        + unblock_card()
        + change_card_pin()
        + list_cards()
        + validate_card()
        + create_investment()
        + calculate_investment_profit()
        + withdraw_investment()
        + list_investments()
        + send_notification()
        + notify_large_transfer()
        + notify_login()
        + notify_account_blocked()
        + detect_multiple_logins()
        + detect_large_transactions()
        + temporary_account_lock()
        + suspicious_login_detection()
        + validate_transfer_limit()
        + get_top_clients()
        + get_total_bank_money()
        + get_total_transactions()
        + get_most_used_account_type()
        + get_employee_performance()
        + close_account()
        + apply_monthly_fee()
        + currency_conversion()
        + promotion_history()
        + reject_promotion()
        + evaluate_promotion()
        + generate_employee_report()
        + generate_security_report()
        + generate_suspicious_activity_report()
        + generate_credit_report()
        + filter_transactions_by_type()
        + filter_transactions_by_amount()
        + classify_client()
        + blacklist_client()
        + calculate_client_score()
        + employee_activity_history()
        + employee_login_history()
        + evaluate_employee()
                }
        

    class BonusAdmin{
        + register(employee)
        + get_total_bonus()
        }


    class AutenticableHelper{
        + comparate_passwords(saved_password, written_password)
    }

    Cuentas <|-- Cuenta
    Cuentas --* Cliente
    Cuentas <|-- CuentaBancaria
    Cuentas <|-- Transaction
    Cuentas <|-- Credito
    Cuentas <|-- Transaction

    class Cuenta{

    }

    class Transaction{
        + type: str
        + amount: float
        + origin_acc: "CuentaBancaria"
        + destination_acc
        + description: str
    }

    class Credito{
        + amount: float
        + interest_rate: float
        + months: int
        + client: Cliente
    }
    class Cliente{ 
        + name: str
        + dni: int
        + age: int
        + profession: str
        + add_credit(credit)
    }
    class CuentaBancaria{
        + bank_number: int
        + client: Cliente
        + account_number: int
        + get_balance()
        + set_balance(value)
        + get_withdrawals_without_balance()
        + get_transfers_without_balancde()
        + withdraw(amount)
        + deposit(amount)
        + transfer(amount, target_account)
        + compare_to(other)
        + to_string()
        + show_history()
        + check_transaction_limit()
        + daily_withdraws()
        + can_withdraw()
        + get_max_transactions_per_minute()
        + get_min_balance()
    }
    class Transaction{
        + type: str
        + amount: float
        + origin_acc: "CuentaBancaria"
        + destination_acc
        + description: str
    }


    CuentaBancaria <|-- CuentaAhorros
    CuentaBancaria <|-- CuentaCorriente
    CuentaBancaria <|-- CuentaEmpresarial
    CuentaBancaria <|-- CuentaJuvenil
    

    class CuentaAhorros{
        + bank_number: int 
        + client: Cliente
        + account_number: int
        + apply_interest_rate()
        + withdraw(amount)
        + get_max_transactions_per_minute()
        + can_withdraw(amount)
    }
    class CuentaCorriente{
        + bank_number: int
        + client: Cliente 
        + account_number: int
        + get_min_balance()
        + withdraw(amount)
        + get_max_transactions_per_minute()
        + can_withdraw(amount)
    }
    class CuentaEmpresarial{
        + bank_number: int
        + client: Cliente
        + nit: int
        + authorized_users: list["Cliente"]
        + account_number: int
        + add_authorized_user(new_user)
        + get_max_transactions_per_minute()
        + can_withdraw(amount)
    }
    class CuentaJuvenil{
        + bank_number: int
        + Client: Cliente
        + account_number: int
        + can_withdraw(amount)
    }


    Excepciones <|-- OperacionImposibleException
    Excepciones <|-- SaldoInsuficienteException
    Excepciones <|-- CuentaNoEncontradaException

    class CuentaNoEncontradaException{}
    class SaldoInsuficienteException{}
    class OperacionImposibleException{
        + message: str
        + codigo: int
    }

    class Log{}

    Roles <|-- Empleado
    Roles <|-- SocioComercial


    class SocioComercial{
        + autenticar_usuario(clave)
    }
    
    class Empleado{
        + name: str
        + dni: int
        + position: str
        + salary: float
        + experience: int
        + get_position()
        + set_position(new_position)
        + get_dni()
        + get_salary()
        + set_salary(new_salary)
        + obtain_bonus()
        + raise_salary()
        + can_approve_credit(amount)
        + can_modify_salary(employee, amount)
        + can_see_reports()
        + can_see_information()
        + can_approve_transfer(amount)
        + can_create_user()
        + can_delete_user()
        + can_raise_salary(employee)
        + percentage_increase()
        + can_request_promotion()
    }


   Empleado <|-- Administrativo
   Empleado <|-- Analista
   Empleado <|-- Director
   Empleado <|-- EmpleadoAutenticable
   Empleado <|-- Logistica


   class Administrativo{
    + name: str
    + dni: int
    + experience: int
    + password: str
    + obtain_bonus()
    + can_see_reports()
    + can_see_information()
    + can_create_user()
    + can_delete_user()
    + percentage_increase()
   }
   class Analista{
    + name: str
    + dni: int
    + experience: int
    + password: str
    + obtain_bonus()
    + can_see_reports()
    + percentage_increase()
   }
   class Director{
    + name: str
    + dni: int
    + department: str
    + experience: int
    + password: str
    + obtain_bonus()
    + can_approve_credit(amount)
    + can_modify_salary(employee, amount)
    + can_see_reports()
    + can_see_information() 
    + can_approve_transfer(amount)
    + can_create_user()
    + can_delete_user()
    + can_raise_salary(employee)
    + percentage_increase()
   }
   class EmpleadoAutenticable{
    + name: str
    + dni: int
    + position: str
    + salary: float
    + experience: int
    + password: str
    + authenticate_user(new_password)
    + obtain_bonus()
   }
   class Logistica{
    + name: str
    + dni: int
    + experience: int
    + password: str
    + obtain_bonus()
    + percentage_increase()
   }
Banco *-- CuentaBancaria
Banco *--Empleado
Banco *-- Cliente
CuentaBancaria *-- Transaction
Cliente *-- Credito
